--- a/prometheus_ha/prometheus.yaml
+++ b/prometheus_ha/prometheus.yaml
@@ -308,39 +308,39 @@ objects:
             message: "Prometheus instance {{ $labels.instance }} has discovered only {{ $value }} AlertManager instances."
         - alert: Scrapes with rejected samples
           expr: increase(prometheus_target_scrapes_exceeded_sample_limit_total[5m]) > 0
-          for: 1m
+          for: 5m
           labels:
             severity: "Warning"
           annotations:
             message: "Prometheus instance {{ $labels.instance }} has scraped {{ $value }} targets exceeding the sample limit in the last 5 minutes."
         - alert: WAL corruption
           expr: increase(tsdb_wal_corruptions_total[5m]) > 0
-          for: 1m
+          for: 5m
           labels:
             severity: "Critical"
           annotations:
             message: "Prometheus instance {{ $labels.instance }} has encountered {{ $value }} WAL corruptions in the last 5 minutes."
         - alert: Compaction failures
           expr: increase(prometheus_tsdb_compactions_failed_total[5m]) > 0
-          for: 1m
+          for: 5m
           labels:
             severity: "Warning"
           annotations:
             message: "Prometheus instance {{ $labels.instance }} has encountered {{ $value }} compaction failures in the last 5 minutes."
         - alert: File SD errors
-          expr: increase(prometheus_sd_file_read_errors_total[5m]) > 0
-          for: 1m
+          expr: rate(prometheus_sd_file_read_errors_total[5m]) / rate(prometheus_sd_file_scan_duration_seconds_count[5m]) * 100 > 5
+          for: 5m
           labels:
             severity: "Warning"
           annotations:
-            message: "Prometheus instance {{ $labels.instance }} has encountered {{ $value }} read errors for the file SD in the last 5 minutes."
+            message: "Prometheus instance {{ $labels.instance }} has encountered {{ $value }}% of read errors for the file SD in the last 5 minutes."
         - alert: Rule evaluation failures
-          expr: increase(prometheus_rule_evaluation_failures_total[5m]) > 0
-          for: 1m
+          expr: rate(prometheus_rule_evaluation_failures_total[5m]) / rate(prometheus_rule_evaluation_duration_seconds_count[5m]) * 100 > 5
+          for: 5m
           labels:
             severity: "Warning"
           annotations:
-            message: "Prometheus instance {{ $labels.instance }} has encountered {{ $value }} evaluation errors for {{ $labels.rule_type }} rules in the last 5 minutes."
+            message: "Prometheus instance {{ $labels.instance }} has encountered {{ $value }}% of evaluation errors in the last 5 minutes."
 
       - name: endpoints
         interval: 30s
