--- a/prometheus_ha/prometheus.yaml
+++ b/prometheus_ha/prometheus.yaml
@@ -422,9 +422,8 @@ objects:
           relabel_configs:
           - source_labels:
             - __meta_kubernetes_service_name
-            - __meta_kubernetes_endpoint_ready
             action: keep
-            regex: alertmanager;true
+            regex: alertmanager
 
       scrape_configs:
       - job_name: 'prometheus'
@@ -444,10 +443,9 @@ objects:
         # metrics are pulled through the OAuth proxy container
         - source_labels:
           - __meta_kubernetes_service_name
-          - __meta_kubernetes_endpoint_ready
           - __meta_kubernetes_pod_container_name
           action: keep
-          regex: prometheus;true;proxy
+          regex: prometheus;proxy
         - source_labels: [__meta_kubernetes_pod_name]
           action: replace
           target_label: instance
@@ -468,10 +466,9 @@ objects:
         relabel_configs:
         - source_labels:
           - __meta_kubernetes_service_name
-          - __meta_kubernetes_endpoint_ready
           - __meta_kubernetes_pod_container_name
           action: keep
-          regex: alertmanager;true;am-proxy
+          regex: alertmanager;am-proxy
         - source_labels: [__meta_kubernetes_pod_name]
           action: replace
           target_label: instance
@@ -492,10 +489,9 @@ objects:
         relabel_configs:
         - source_labels:
           - __meta_kubernetes_service_name
-          - __meta_kubernetes_endpoint_ready
           - __meta_kubernetes_pod_container_name
           action: keep
-          regex: alertbuffer;true;proxy
+          regex: alertbuffer;proxy
         - source_labels: [__meta_kubernetes_pod_name]
           action: replace
           target_label: instance
@@ -528,9 +524,6 @@ objects:
 
         relabel_configs:
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
-          action: keep
-          regex: true
-        - source_labels: [__meta_kubernetes_endpoint_ready]
           action: keep
           regex: true
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
