--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -145,22 +145,21 @@ objects:
 
         relabel_configs:
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
+          regex: "true"
           action: keep
-          regex: true
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
+          regex: (https?)
           action: replace
           target_label: __scheme__
-          regex: (https?)
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_path]
+          regex: (.+)
           action: replace
           target_label: __metrics_path__
-          regex: (.+)
         - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_port]
-          action: replace
-          target_label: __address__
           regex: (.+)(?::\d+);(\d+)
+          action: replace
           replacement: $1:$2
-          regex: (.+)
+          target_label: __address__
         - action: labelmap
           regex: __meta_kubernetes_service_label_(.+)
         - source_labels: [__meta_kubernetes_service_name]
@@ -233,20 +232,20 @@ objects:
 
         relabel_configs:
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
+          regex: "true"
           action: keep
-          regex: true
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
+          regex: (https?)
           action: replace
           target_label: __scheme__
-          regex: (https?)
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_path]
+          regex: (.+)
           action: replace
           target_label: __metrics_path__
-          regex: (.+)
         - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_port]
+          regex: (.+)(?::\d+);(\d+)
           action: replace
           target_label: __address__
-          regex: (.+)(?::\d+);(\d+)
           replacement: $1:$2
         - action: labelmap
           regex: __meta_kubernetes_service_label_(.+)
